Improve build job names for external repo workflows
Add platform and GPU family information to build job names when running
from external repos (rocm-libraries, rocm-systems), making them easier to
identify in the GitHub Actions UI.

Job name changes:
- Internal Linux builds: 'Build (xfail false)' (unchanged)
- External Linux builds: 'Build Linux::gfx94X (xfail false)'
- Internal Windows builds: 'Build release (xfail false)' (unchanged)
- External Windows builds: 'Build Windows::gfx94X::release (xfail false)'

--- a/.github/workflows/build_portable_linux_artifacts.yml
+++ b/.github/workflows/build_portable_linux_artifacts.yml
@@ -69,7 +69,9 @@ permissions:
 
 jobs:
   build_portable_linux_artifacts:
-    name: Build (xfail ${{ inputs.expect_failure }})
+    # For external repos (rocm-libraries, rocm-systems), include platform and GPU family in job name
+    # to make them easier to identify in GitHub Actions UI. Internal builds keep simple 'Build' name.
+    name: ${{ inputs.external_source_checkout && format('Build Linux::{0}', inputs.amdgpu_families) || 'Build' }} (xfail ${{ inputs.expect_failure }})
     # azure-linux-scale-rocm are used for regular CI builds
     # azure-linux-scale-rocm-heavy are used for CI builds that require more resources (ex: ASAN builds)
     runs-on: ${{ inputs.build_variant_label == 'asan' && 'azure-linux-u2404-hx176-cpu-rocm' || 'azure-linux-scale-rocm' }}
