Fix test workflows to checkout TheRock for external repos
Test workflows need to checkout TheRock (not the external repo) to access
build_tools scripts for test configuration and execution.

Changes:
- Add therock_ref input to test_artifacts and test_sanity_check workflow_call
- Pass therock_ref from ci_linux and ci_windows to test workflows
- Update checkout to use ROCm/TheRock repo when running from external repos
- Move main checkout before cleanup step, eliminating redundant prejob checkout
- Update cleanup script path from prejob/build_tools to build_tools

This fixes 'Configure test matrix' failures when tests run from external repos.

--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -112,6 +112,7 @@ jobs:
       test_labels: ${{ inputs.test_labels }}
       project_to_test: ${{ inputs.project_to_test }}
       sanity_check_only_for_family: ${{ inputs.sanity_check_only_for_family == true }}
+      therock_ref: ${{ inputs.therock_ref }}
 
   test_linux_benchmarks:
     needs: [build_portable_linux_artifacts]
