Improve test job names for external repo workflows
Add platform and GPU family information to test job names when running
from external repos (rocm-libraries, rocm-systems), matching the pattern
used for build jobs.

External repos are detected via github.repository check (not available
as external_source_checkout input in test workflows).

Job name changes for external repos:
- Test component: 'Test linux::gfx94X::hip-tests (shard 1 of 4)'
- Sanity check: 'Sanity ROCM Test linux::gfx94X'
- Configure test matrix: 'Configure test matrix gfx94X'

TheRock repo job names remain unchanged. Updated comments in build
workflows to note that test workflows use the same pattern.

--- a/.github/workflows/build_portable_linux_artifacts.yml
+++ b/.github/workflows/build_portable_linux_artifacts.yml
@@ -71,6 +71,7 @@ jobs:
   build_portable_linux_artifacts:
     # For external repos (rocm-libraries, rocm-systems), include platform and GPU family in job name
     # to make them easier to identify in GitHub Actions UI. Internal builds keep simple 'Build' name.
+    # Test workflows use the same pattern.
     name: ${{ inputs.external_source_checkout && format('Build Linux::{0}', inputs.amdgpu_families) || 'Build' }} (xfail ${{ inputs.expect_failure }})
     # azure-linux-scale-rocm are used for regular CI builds
     # azure-linux-scale-rocm-heavy are used for CI builds that require more resources (ex: ASAN builds)
