--- a/.github/workflows/build_windows_artifacts.yml
+++ b/.github/workflows/build_windows_artifacts.yml
@@ -68,6 +68,7 @@ jobs:
   build_windows_artifacts:
     # For external repos (rocm-libraries, rocm-systems), include platform, GPU family, and build variant
     # in job name to make them easier to identify in GitHub Actions UI. Internal builds use 'Build {variant}' format.
+    # Test workflows use the same pattern.
     name: ${{ inputs.external_source_checkout && format('Build Windows::{0}::{1}', inputs.amdgpu_families, inputs.build_variant_label) || format('Build {0}', inputs.build_variant_label) }} (xfail ${{ inputs.expect_failure }})
     runs-on: azure-windows-scale-rocm
     continue-on-error: ${{ inputs.expect_failure }}
