--- a/.github/workflows/test_artifacts.yml
+++ b/.github/workflows/test_artifacts.yml
@@ -56,7 +56,9 @@ permissions:
 
 jobs:
   configure_test_matrix:
-    name: "Configure test matrix"
+    # For external repos (rocm-libraries, rocm-systems), include GPU family in job name.
+    # TheRock repo keeps the simple name. Detection via github.repository check.
+    name: ${{ github.repository != 'ROCm/TheRock' && format('Configure test matrix {0}', inputs.amdgpu_families) || 'Configure test matrix' }}
     # if there is a test machine available
     if: ${{ inputs.test_runs_on != '' }}
     runs-on: ${{ inputs.test_runs_on }}
