Reorder build steps and clarify external repo operations
Reorder build workflow steps to fetch sources before DVC pull, which is
more logical as DVC operates on the fetched source repository.

Step order changes (Linux and Windows):
1. Runner health status
2. Fetch sources (moved up)
3. DVC pull (external repos only)
4. Patch external repo

Also clarify step names and descriptions:
- 'Auto-detect external source configuration' â†’ 'Detect external source configuration'
- 'DVC pull' â†’ 'DVC pull (external repos only)'
- Remove 'auto-' prefix from project detection descriptions

--- a/.github/workflows/build_portable_linux_artifacts.yml
+++ b/.github/workflows/build_portable_linux_artifacts.yml
@@ -118,7 +118,7 @@ jobs:
         run: |
           pip install -r $THEROCK_DIR/requirements.txt
 
-      - name: Auto-detect external source configuration
+      - name: Detect external source configuration
         if: ${{ inputs.external_source_checkout }}
         id: detect
         run: python3 $THEROCK_DIR/build_tools/github_actions/detect_external_repo_config.py "${{ inputs.repository_override || github.repository }}" --platform linux
@@ -140,11 +140,6 @@ jobs:
         run: |
           $THEROCK_DIR/build_tools/health_status.py
 
-      - name: DVC pull
-        if: ${{ inputs.external_source_checkout && steps.detect.outputs.enable_dvc == 'true' }}
-        working-directory: source-repo
-        run: dvc pull
-
       - name: Fetch sources
         timeout-minutes: 30
         run: |
@@ -153,6 +148,11 @@ jobs:
           else
             $THEROCK_DIR/build_tools/fetch_sources.py --jobs 12
           fi
+
+      - name: DVC pull (external repos only)
+        if: ${{ inputs.external_source_checkout && steps.detect.outputs.enable_dvc == 'true' }}
+        working-directory: source-repo
+        run: dvc pull
 
       - name: Patch external repo
         if: ${{ inputs.external_source_checkout }}
