--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -36,6 +36,18 @@ on:
         type: string
         default: ""
         description: "Comma-separated list of Windows GPU families to build and test"
+      linux_test_labels:
+        type: string
+        default: ""
+      linux_use_prebuilt_artifacts:
+        type: boolean
+        default: false
+      windows_test_labels:
+        type: string
+        default: ""
+      windows_use_prebuilt_artifacts:
+        type: boolean
+        default: false
     outputs:
       enable_build_jobs:
         description: Whether to enable build jobs.
@@ -88,7 +100,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
-          repository: ${{ inputs.external_source_checkout && inputs.repository_override || github.repository }}
+          repository: ${{ inputs.repository_override || github.repository }}
           path: ${{ inputs.external_source_checkout && 'source-repo' || '.' }}
           fetch-depth: 2
 
@@ -108,30 +120,20 @@ jobs:
         run: |
           echo "PR_LABELS=$(gh pr view ${PR_NUMBER} --json labels)" >> $GITHUB_ENV
 
-      - name: Set up Python
-        uses: actions/setup-python@v6
-        with:
-          python-version: "3.12"
-
-      - name: Install python dependencies
-        run: |
-          pip install pydantic requests
-
       - name: Configuring CI options
         id: configure
         env:
-          INPUT_LINUX_AMDGPU_FAMILIES: ${{ inputs.linux_amdgpu_families || github.event.inputs.linux_amdgpu_families }}
-          LINUX_TEST_LABELS: ${{ github.event.inputs.linux_test_labels }}
-          LINUX_USE_PREBUILT_ARTIFACTS: ${{ github.event.inputs.linux_use_prebuilt_artifacts }}
-          INPUT_WINDOWS_AMDGPU_FAMILIES: ${{ inputs.windows_amdgpu_families || github.event.inputs.windows_amdgpu_families }}
-          WINDOWS_TEST_LABELS: ${{ github.event.inputs.windows_test_labels }}
-          WINDOWS_USE_PREBUILT_ARTIFACTS: ${{ github.event.inputs.windows_use_prebuilt_artifacts }}
+          INPUT_LINUX_AMDGPU_FAMILIES: ${{ inputs.linux_amdgpu_families }}
+          LINUX_TEST_LABELS: ${{ inputs.linux_test_labels }}
+          LINUX_USE_PREBUILT_ARTIFACTS: ${{ inputs.linux_use_prebuilt_artifacts }}
+          INPUT_WINDOWS_AMDGPU_FAMILIES: ${{ inputs.windows_amdgpu_families }}
+          WINDOWS_TEST_LABELS: ${{ inputs.windows_test_labels }}
+          WINDOWS_USE_PREBUILT_ARTIFACTS: ${{ inputs.windows_use_prebuilt_artifacts }}
           BUILD_VARIANT: ${{ inputs.build_variant }}
           MULTI_ARCH: ${{ inputs.multi_arch }}
           # Variable comes from ROCm organization variable 'ROCM_THEROCK_TEST_RUNNERS'
           ROCM_THEROCK_TEST_RUNNERS: ${{ vars.ROCM_THEROCK_TEST_RUNNERS }}
           LOAD_TEST_RUNNERS_FROM_VAR: false
-          BASE_REF: HEAD^
           GITHUB_EVENT_NAME: ${{ github.event_name }}
           GITHUB_REPOSITORY_OVERRIDE: ${{ inputs.repository_override }}
           PROJECTS: ${{ inputs.projects }}
