Add libatomic as a Linux sysdep to fix rocminfo on RHEL and SLES
Fixes #2518

On clean installations of RHEL 8.10, 10.0, and SLES 15.7, rocminfo fails
with 'libatomic.so.1: cannot open shared object file'. This change adds
libatomic as a bundled system dependency for Linux builds.

Changes:
- Added libatomic sysdep built from GCC 13.2.0 sources
- Configured with SONAME prefix 'rocm_sysdeps_' to avoid system conflicts
- Added THEROCK_BUNDLED_LIBATOMIC variable and made rocminfo depend on it
- Library installed to lib/rocm_sysdeps/lib/ and included in tarballs
- rocminfo now has proper RPATH to find bundled libatomic

The bundled libatomic will be automatically included in portable builds
when THEROCK_BUNDLE_SYSDEPS=ON (default for Linux), ensuring rocminfo
works on distributions without system libatomic installed.

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -63,6 +63,7 @@ if(THEROCK_ENABLE_CORE_RUNTIME)
       "${_system_toolchain}"
     RUNTIME_DEPS
       ROCR-Runtime
+      ${THEROCK_BUNDLED_LIBATOMIC}
   )
   therock_cmake_subproject_glob_c_sources(rocminfo SUBDIRS .)
   therock_cmake_subproject_activate(rocminfo)
