Fix workflow input passing and path issues
- Pass all workflow_dispatch inputs from ci.yml to setup.yml
- Pass therock_ref from test_artifacts.yml to test_sanity_check.yml
- Fix test_sanity_check.yml paths to use prejob/ prefix after sparse checkout
- Fix setup.yml repository checkout to handle empty repository_override
- Improve setup.yml checkout step name to show actual repository
- Add comments explaining workflow_dispatch vs workflow_call input differences
  (actionlint enforces old 10-input limit; GitHub now supports 25 as of Dec 2025)

--- a/.github/workflows/build_windows_artifacts.yml
+++ b/.github/workflows/build_windows_artifacts.yml
@@ -29,6 +29,10 @@ on:
       extra_cmake_options:
         type: string
 
+  # workflow_call has additional inputs (external_source_checkout, therock_ref, repository_override)
+  # that workflow_dispatch doesn't have. This is intentional - workflow_dispatch would exceed
+  # GitHub's previous 10-input limit (now 25 as of Dec 2025), and actionlint still enforces
+  # the old limit. These extra inputs are only needed for programmatic calls from ci.yml anyway.
   workflow_call:
     inputs:
       package_version:
