--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -97,7 +97,7 @@ jobs:
             exit 1
           fi
 
-      - name: Checkout repository
+      - name: Checkout ${{ inputs.repository_override || github.repository }}
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
           repository: ${{ inputs.repository_override || github.repository }}
