Fix repository checkout in build workflows
Remove external_source_checkout condition from repository field to handle
case when external_source_checkout=true but repository_override is empty.
This matches the fix already applied to setup.yml.

--- a/.github/workflows/build_windows_artifacts.yml
+++ b/.github/workflows/build_windows_artifacts.yml
@@ -101,7 +101,7 @@ jobs:
       - name: "Checking out repository"
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
-          repository: ${{ inputs.external_source_checkout && inputs.repository_override || github.repository }}
+          repository: ${{ inputs.repository_override || github.repository }}
           path: ${{ inputs.external_source_checkout && 'source-repo' || '.' }}
 
       - name: Checkout TheRock repository
