--- a/.github/workflows/build_portable_linux_artifacts.yml
+++ b/.github/workflows/build_portable_linux_artifacts.yml
@@ -100,7 +100,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
-          repository: ${{ inputs.external_source_checkout && inputs.repository_override || github.repository }}
+          repository: ${{ inputs.repository_override || github.repository }}
           path: ${{ inputs.external_source_checkout && 'source-repo' || '.' }}
 
       # safe.directory must be set before Runner Health Status
