--- a/.github/workflows/test_artifacts.yml
+++ b/.github/workflows/test_artifacts.yml
@@ -86,20 +86,20 @@ jobs:
           TEST_LABELS: ${{ inputs.test_labels }}
         run: python ./build_tools/github_actions/fetch_test_configurations.py
 
-  test_sanity_check:
-    name: 'Test Sanity Check'
-    needs: configure_test_matrix
-    uses: './.github/workflows/test_sanity_check.yml'
-    with:
-      artifact_group: ${{ inputs.artifact_group }}
-      artifact_run_id: ${{ inputs.artifact_run_id }}
-      amdgpu_families: ${{ inputs.amdgpu_families }}
-      test_runs_on: ${{ inputs.test_runs_on }}
-      platform: ${{ needs.configure_test_matrix.outputs.platform }}
+  # test_sanity_check:
+  #   name: 'Test Sanity Check'
+  #   needs: configure_test_matrix
+  #   uses: './.github/workflows/test_sanity_check.yml'
+  #   with:
+  #     artifact_group: ${{ inputs.artifact_group }}
+  #     artifact_run_id: ${{ inputs.artifact_run_id }}
+  #     amdgpu_families: ${{ inputs.amdgpu_families }}
+  #     test_runs_on: ${{ inputs.test_runs_on }}
+  #     platform: ${{ needs.configure_test_matrix.outputs.platform }}
 
   test_components:
     name: 'Test ${{ matrix.components.job_name }}'
-    needs: [test_sanity_check, configure_test_matrix]
+    needs: [configure_test_matrix]
     # skip tests if no test matrix to run and sanity check only requested
     if: ${{ needs.configure_test_matrix.outputs.components != '[]' && !inputs.sanity_check_only_for_family }}
     strategy:
