Address PR review feedback
- Use contains() instead of exact match for repository checks in job names
  to support forked PRs (username/TheRock should show simple names)
- Refactor external repo detection to use EXTERNAL_REPOS list for better
  maintainability and easier addition of new repos like rccl

--- a/.github/workflows/test_artifacts.yml
+++ b/.github/workflows/test_artifacts.yml
@@ -58,7 +58,7 @@ jobs:
   configure_test_matrix:
     # For external repos (rocm-libraries, rocm-systems), include GPU family in job name.
     # TheRock repo keeps the simple name. Detection via github.repository check.
-    name: ${{ github.repository != 'ROCm/TheRock' && format('Configure test matrix {0}', inputs.amdgpu_families) || 'Configure test matrix' }}
+    name: ${{ !contains(github.repository, 'TheRock') && format('Configure test matrix {0}', inputs.amdgpu_families) || 'Configure test matrix' }}
     # if there is a test machine available
     if: ${{ inputs.test_runs_on != '' }}
     runs-on: ${{ inputs.test_runs_on }}
