--- a/.github/actions/setup_test_environment/action.yml
+++ b/.github/actions/setup_test_environment/action.yml
@@ -87,5 +87,6 @@ runs:
       env:
         OUTPUT_ARTIFACTS_DIR: ${{ inputs.OUTPUT_ARTIFACTS_DIR }}
       run: |
+        apt-get update -y gcc
         uv pip install -r ${OUTPUT_ARTIFACTS_DIR}/share/rocprofiler-sdk/tests/requirements.txt
         uv pip freeze
