--- a/.gitmodules
+++ b/.gitmodules
@@ -35,8 +35,8 @@
 	branch = develop
 [submodule "rocm-systems"]
 	path = rocm-systems
-	url = https://github.com/ROCm/rocm-systems.git
-	branch = develop
+	url = https://github.com/kcossett-amd/rocm-systems.git
+	branch = users/kcossett-amd/LaRoche
 [submodule "spirv-llvm-translator"]
 	path = compiler/spirv-llvm-translator
 	url = https://github.com/ROCm/SPIRV-LLVM-Translator.git
