--- a/.github/workflows/test_linux_jax_wheels.yml
+++ b/.github/workflows/test_linux_jax_wheels.yml
@@ -115,7 +115,7 @@ jobs:
       AMDGPU_FAMILY: ${{ inputs.amdgpu_family }}
       THEROCK_TAR_URL: ${{ inputs.tar_url }}
       PYTHON_VERSION: ${{ inputs.python_version }}
-      WHEEL_INDEX_URL: ${{ inputs.package_index_url }}/${{ inputs.amdgpu_family }}
+      WHEEL_INDEX_URL: ${{ inputs.package_index_url }}/${{ inputs.amdgpu_family }}/
 
     steps:
       - name: Checkout
@@ -181,11 +181,11 @@ jobs:
       - name: Install JAX wheels from package index
         run: |
           # Install jaxlib/plugin/pjrt from the GPU-family index; install jax from PyPI to match the version
-          pip install --index-url "${{ env.WHEEL_INDEX_URL }}" \
-            "jaxlib==${{ env.JAX_VERSION }}+rocm${{ inputs.rocm_version }}" \
-            "jax-rocm7-plugin==${{ env.JAX_VERSION }}+rocm${{ inputs.rocm_version }}" \
-            "jax-rocm7-pjrt==${{ env.JAX_VERSION }}+rocm${{ inputs.rocm_version }}"
-          pip install --extra-index-url https://pypi.org/simple "jax==${{ env.JAX_VERSION }}"
+          pip install --index-url "${WHEEL_INDEX_URL}" \
+            "jaxlib==${JAX_VERSION}+rocm${{ inputs.rocm_version }}" \
+            "jax-rocm7-plugin==${JAX_VERSION}+rocm${{ inputs.rocm_version }}" \
+            "jax-rocm7-pjrt==${JAX_VERSION}+rocm${{ inputs.rocm_version }}"
+          pip install --extra-index-url https://pypi.org/simple "jax==${JAX_VERSION}"
 
       - name: Run JAX tests
         run: |
