test enableing aqlprofile on sdk artifact and test only

--- a/profiler/CMakeLists.txt
+++ b/profiler/CMakeLists.txt
@@ -47,19 +47,16 @@ if(THEROCK_ENABLE_ROCPROFV3)
   )
   therock_cmake_subproject_activate(aqlprofile)
 
-  therock_provide_artifact(aqlprofile
-    TARGET_NEUTRAL
+
+  therock_provide_artifact(aqlprofile-tests
+    TARGET_SPECIFIC
     DESCRIPTOR artifact-aqlprofile.toml
     COMPONENTS
-      dbg
-      dev
-      doc
-      lib
-      run
       test
     SUBPROJECT_DEPS
       aqlprofile
   )
+
 
   ##############################################################################
   # rocprofiler-sdk
@@ -195,6 +192,7 @@ if(THEROCK_ENABLE_ROCPROFV3)
       lib
       run
     SUBPROJECT_DEPS
+      aqlprofile
       rocprofiler-sdk
       roctracer
       ${_rocprofiler_sdk_optional_deps}
@@ -211,6 +209,7 @@ if(THEROCK_ENABLE_ROCPROFV3)
       run
       test
     SUBPROJECT_DEPS
+      aqlprofile
       rocprofiler-sdk
       rocprofiler-compute
       roctracer
